# audio_decoder

./: .metadata  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/nl/silversoft/audio_decoder/: AudioDecoderPlugin.kt
android/src/test/kotlin/nl/silversoft/audio_decoder/: AudioDecoderPluginTest.kt
darwin/: audio_decoder.podspec
darwin/Classes/: AudioDecoderPlugin.swift
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/nl/silversoft/audio_decoder_example/: MainActivity.kt
example/integration_test/: benchmark_test.dart  plugin_integration_test.dart  plugin_integration_test_web.dart  test_helpers.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: audio_decoder.podspec
ios/Classes/: AudioDecoderPlugin.swift
lib/: audio_conversion_exception.dart  audio_decoder.dart  audio_decoder_method_channel.dart  audio_decoder_platform_interface.dart  audio_decoder_web.dart  audio_info.dart
linux/: CMakeLists.txt  audio_decoder_plugin.cc
linux/include/audio_decoder/: audio_decoder_plugin.h
linux/test/: audio_decoder_plugin_test.cc
macos/: audio_decoder.podspec
macos/Classes/: AudioDecoderPlugin.swift
test/: audio_decoder_method_channel_test.dart  audio_decoder_test.dart
windows/: CMakeLists.txt  audio_decoder_plugin.cpp  audio_decoder_plugin.h  audio_decoder_plugin_c_api.cpp
windows/include/audio_decoder/: audio_decoder_plugin_c_api.h
windows/test/: audio_decoder_plugin_test.cpp
